--- a/doc/man7/EVP_PKEY-X25519.pod
+++ b/doc/man7/EVP_PKEY-X25519.pod
@@ -28,6 +28,14 @@ The private key value.
 
 =back
 
+=head1 CONFORMING TO
+
+=over 4
+
+=item RFC 8032
+
+=back
+
 =head1 EXAMPLES
 
 An B<EVP_PKEY> context can be obtained by calling:
@@ -43,6 +51,26 @@ An B<EVP_PKEY> context can be obtained by calling:
 
     EVP_PKEY_CTX *pctx =
         EVP_PKEY_CTX_new_from_name(NULL, "ED448", NULL);
+
+An B<ED25519> key can be generated like this:
+
+    EVP_PKEY *pkey = NULL;
+    EVP_PKEY_CTX *pctx =
+        EVP_PKEY_CTX_new_from_name(NULL, "ED25519", NULL);
+
+    EVP_PKEY_keygen_init(pctx);
+    EVP_PKEY_gen(pctx, &pkey);
+    EVP_PKEY_CTX_free(pctx);
+
+An B<X25519> key can be generated in a similar way:
+
+    EVP_PKEY *pkey = NULL;
+    EVP_PKEY_CTX *pctx =
+        EVP_PKEY_CTX_new_from_name(NULL, "X25519", NULL);
+
+    EVP_PKEY_keygen_init(pctx);
+    EVP_PKEY_gen(pctx, &pkey);
+    EVP_PKEY_CTX_free(pctx);
 
 =head1 SEE ALSO
 
