--- a/doc/man3/EC_POINT_new.pod
+++ b/doc/man3/EC_POINT_new.pod
@@ -256,7 +256,8 @@ EC_POINT_set_compressed_coordinates_GFp(),
 EC_POINT_set_affine_coordinates_GF2m(), EC_POINT_get_affine_coordinates_GF2m(),
 EC_POINT_set_compressed_coordinates_GF2m() were deprecated in OpenSSL 3.0.
 
-B<EC_POINT_set_affine_coordinates> and B<EC_POINT_get_affine_coordinates> were
+B<EC_POINT_set_affine_coordinates>, B<EC_POINT_get_affine_coordinates>,
+and B<EC_POINT_set_compressed_coordinates> were
 added in OpenSSL 1.1.1.
 
 =head1 COPYRIGHT
