--- a/doc/man7/provider-signature.pod
+++ b/doc/man7/provider-signature.pod
@@ -303,7 +303,7 @@ initialised verification context is passed in the I<ctx> parameter. The data to 
 verified is in I<tbs> which should be I<tbslen> bytes long. The signature to be
 verified is in I<sig> which is I<siglen> bytes long.
 
-=head2 Signature Parameters
+=head2 Signature parameters
 
 See L<OSSL_PARAM(3)> for further details on the parameters structure used by
 the OP_signature_get_ctx_params() and OP_signature_set_ctx_params() functions.
@@ -324,7 +324,12 @@ algorithms:
 =item "digest" (B<OSSL_SIGNATURE_PARAM_DIGEST>) <UTF8 string>
 
 Get or sets the name of the digest algorithm used for the input to the signature
-functions.
+functions. It is required in order to calculate the "algorithm-id".
+
+= item "properties" (B<OSSL_SIGNATURE_PARAM_PROPERTIES>) <UTF8 string>
+
+Sets the name of the property query associated with the "digest" algorithm.
+NULL is used if this optional value is not set.
 
 =item "digest-size" (B<OSSL_SIGNATURE_PARAM_DIGEST_SIZE>) <unsigned integer>
 
@@ -358,7 +363,7 @@ i.e. parameters that can be used with OP_signature_get_ctx_params() and
 OP_signature_set_ctx_params() respectively.
 See L<OSSL_PARAM(3)> for the use of B<OSSL_PARAM> as parameter descriptor.
 
-=head2 MD Parameters
+=head2 MD parameters
 
 See L<OSSL_PARAM(3)> for further details on the parameters structure used by
 the OP_signature_get_md_ctx_params() and OP_signature_set_md_ctx_params()
