--- a/doc/man7/provider.pod
+++ b/doc/man7/provider.pod
@@ -276,8 +276,8 @@ Should it be needed (if other providers are loaded and offer
 implementations of the same algorithms), the property "provider=fips" can
 be used as a search criterion for these implementations. All approved algorithm
 implementations in the FIPS provider can also be selected with the property
-"fips=yes". The FIPS provider also contains a number of non-approved algorithm
-implementations and these can be selected with the property "fips=no".
+"fips=yes". The FIPS provider could also contain some non-approved
+algorithm implementations and these can be selected with the property "fips=no".
 
 =head2 Legacy provider
 
