--- a/doc/man7/provider.pod
+++ b/doc/man7/provider.pod
@@ -42,7 +42,7 @@ If it's built-in, the initialization function may have any name.
 
 The initialization function must have the following signature:
 
- int NAME(const OSSL_PROVIDER *provider,
+ int NAME(const OSSL_CORE_PROVIDER *provider,
           const OSSL_DISPATCH *in, const OSSL_DISPATCH **out,
           void **provctx);
 
@@ -287,6 +287,13 @@ be loaded explicitly, either in code or through OpenSSL configuration
 Should it be needed (if other providers are loaded and offer
 implementations of the same algorithms), the property "provider=legacy" can be
 used as a search criterion for these implementations.
+
+=head2 Null provider
+
+The null provider is built in as part of the F<libcrypto> library. It contains
+no algorithms in it at all. When fetching algorithms the default provider will
+be automatically loaded if no other provider has been explicitly loaded. To
+prevent that from happening you can explicitly load the null provider.
 
 =head1 EXAMPLES
 
